FIXED issue where the browse component throws an error when its unable to find files. ADDED menu bar so its easy to navigate to the other parts of the website UPDATED jenkinsfile component to show a success message when you successfully send the request UPDATED the get logic so it re-throws the error after catching it and logging it REVERTED p-toast change ADDED link to go to the DQ-CI system ADDED logic to set the jenkinsfile to a default when populated. FIXED anchor issue FIXED alignment with middle section for the code editor ADDED new menubar routing for the app template

--- a/src/app/jenkinsfile/jenkinsfile.component.css
+++ b/src/app/jenkinsfile/jenkinsfile.component.css
@@ -1,3 +1,27 @@
 :host ::ng-deep .ui-inplace-display {
   display: block;
 }
+
+a {
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
+.code-editor {
+  width: 100%;
+  height: 1000px;
+}
+
+.code-display-wrapper {
+  padding-top: 1.2em; /* Set to match the default padding of primeng fieldsets... */
+}
